delete `categoria`
